--- a/项目相关/项目心得.md
+++ b/项目相关/项目心得.md
@@ -1,4 +1,4 @@
-## 项目心得
+# 项目心得
 
 
 ### 导航的懒加载
@@ -8,7 +8,6 @@
 * 每个子页面添加MJ的下拉刷新，在初始化页面的时候调用`MJRefresh`的`beginRefreshing`方法实现请求API。
 * 在每个子页面初始化的时候，因为还未显示`MJRefresh`,所以`beginRefreshing`无法立即执行；
 * 当点击tabar展示对应的自控制器的view的时，就会调用`beginRefreshing`，从而实现懒加载
-
 
 
 ### 父子控制器
@@ -136,4 +135,165 @@ cell刷新会调`layoutSubviews`，这里如果再去调用`setNeedsLayout` ==> 
 
     }
 }
+```
+
+
+
+## 导航转场动画
+
+之前在基类导航控制器中封装了转场动画，但是这块的判断条件是拿那些VC来做判断：
+
+
+```objc
+
+- (PushTransition *)pushAnimation{
+    if (!_pushAnimation) {
+        _pushAnimation = [[PushTransition alloc] init];
+    }
+    return _pushAnimation;
+}
+
+- (PopTransition *)popAnimation{
+    if (!_popAnimation) {
+        _popAnimation = [[PopTransition alloc] init];
+    }
+    return _popAnimation;
+}
+
+- (id<UIViewControllerAnimatedTransitioning>)navigationController:(UINavigationController *)navigationController
+                                  animationControllerForOperation:(UINavigationControllerOperation)operation
+                                               fromViewController:(UIViewController *)fromVC
+                                                 toViewController:(UIViewController *)toVC{
+    if ([fromVC isMemberOfClass:GetClass(PostDetailVC)] && [toVC isMemberOfClass:GetClass(PostDetailVC)]) {
+        if (operation == UINavigationControllerOperationPush) {
+            return self.pushAnimation;
+        }else if (operation == UINavigationControllerOperationPop){
+            return self.popAnimation;
+        }
+    }
+    return nil;
+}
+
+```
+
+
+然后hook 导航的返回事件
+
+```objc
+- (void)back {
+    
+    UIViewController *topViewController = [self topViewController];
+    BaseTabBarController *tabBarController = [AppDelegate sharedAppDelegate].baseTabController;
+ if ([topViewController isMemberOfClass:[PostDetailVC class]]){
+        /* 动态详情 */
+        [self.viewControllers enumerateObjectsWithOptions:NSEnumerationReverse usingBlock:^(id  _Nonnull obj, NSUInteger idx, BOOL * _Nonnull stop) {
+            if (![obj isMemberOfClass:GetClass(PostDetailVC)]) {
+                *stop = YES;
+                [self popToViewController:obj animated:YES];
+            }
+        }];
+        return;
+    }
+    
+    [self popViewControllerAnimated:YES];
+}
+
+```
+
+
+然后发现有人封装了一种协议的方法来实现那些VC实现，就判断遵循协议的VC实现自定义转场动画就可以，秒!👍
+
+```objc
+//navigation切换是会走这个代理
+-(id<UIViewControllerAnimatedTransitioning>)navigationController:(UINavigationController *)navigationController animationControllerForOperation:(UINavigationControllerOperation)operation fromViewController:(UIViewController *)fromVC toViewController:(UIViewController *)toVC
+{
+    NSLog(@"转场动画代理方法");
+    self.isSystemSlidBack = YES;
+    //如果来源VC和目标VC都实现协议，那么都做动画
+    if ([fromVC conformsToProtocol:@protocol(XYTransitionProtocol)] && [toVC conformsToProtocol:@protocol(XYTransitionProtocol)]) {
+        
+        BOOL pinterestNedd = [self isNeedTransition:fromVC:toVC];
+        XYTransition *transion = [XYTransition new];
+        if (operation == UINavigationControllerOperationPush && pinterestNedd) {
+            transion.isPush = YES;
+            
+            //暂时屏蔽带动画的右划返回
+            self.isSystemSlidBack = NO;
+            //            self.isSystemSlidBack = YES;
+        }
+        else if(operation == UINavigationControllerOperationPop && pinterestNedd)
+        {
+            //暂时屏蔽带动画的右划返回
+            //            return nil;
+            
+            transion.isPush = NO;
+            self.isSystemSlidBack = NO;
+        }
+        else{
+            return nil;
+        }
+        return transion;
+    }else if([toVC conformsToProtocol:@protocol(XYTransitionProtocol)]){
+        //如果只有目标VC开启动画，那么isSystemSlidBack也要随之改变
+        BOOL pinterestNedd = [self isNeedTransition:toVC];
+        self.isSystemSlidBack = !pinterestNedd;
+        return nil;
+    }
+    return nil;
+}
+
+```
+
+同时也学到了一种转场动画
+
+// An object that drives an interactive animation between one view controller and another.
+* UIPercentDrivenInteractiveTransition *interactivePopTransition
+
+
+
+## AppDelegate启动业务逻辑模块化
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190305183550.png)
+
+```objc
+
+- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
+    //初始化window
+    [self initWindow];
+    
+    //初始化网络请求配置
+    [self NetWorkConfig];
+    
+    //UMeng初始化
+    [self initUMeng];
+    
+    //初始化app服务
+    [self initService];
+    
+    //初始化IM
+    [[IMManager sharedIMManager] initIM];
+    
+    //初始化用户系统
+    [self initUserManager];
+    
+    //网络监听
+    [self monitorNetworkStatus];
+    
+    //广告页
+    [AppManager appStart];
+    
+    return YES;
+}
+```
+
+
+
+## 快速初始化
+
+* 可变数组快速初始化
+
+```objc
+@property (nonatomic,strong) NSMutableArray * dataArray;//数据源
+_dataArray = @[].mutableCopy;
+
 ```
