--- a/项目相关/项目心得.md
+++ b/项目相关/项目心得.md
@@ -1,37 +1,6 @@
 # 项目心得
 
 
-### 导航的懒加载
-
-一种格格家的首页懒加载思路：
-
-* 每个子页面添加MJ的下拉刷新，在初始化页面的时候调用`MJRefresh`的`beginRefreshing`方法实现请求API。
-* 在每个子页面初始化的时候，因为还未显示`MJRefresh`,所以`beginRefreshing`无法立即执行；
-* 当点击tabar展示对应的自控制器的view的时，就会调用`beginRefreshing`，从而实现懒加载
-
-
-### 父子控制器
-
-![](https://i.loli.net/2018/11/01/5bda6e1f95c7b.jpg)
-
-发现在父子控制器层级中，viewWillAppear  viewDidAppear的顺序是
-
-* 父控制器-viewWillAppear
-* 子控制器-viewWillAppear
-* 子控制器-viewDidAppear
-* 父控制器-viewDidAppear
-
-![](https://i.loli.net/2018/11/01/5bda6d5712fd0.jpg)
-![](https://i.loli.net/2018/11/01/5bda6d752be2f.jpg)
-
-![](https://i.loli.net/2018/11/01/5bda6d4b26216.jpg)
-
-也就是说父控制器先初始化，会等其子控制完全显示后再调用viewDidAppear方法
-
-
-
-
-
 ## OC中多参数的方法
 
 当一个方法涉及到不确定多参数的设置和使用时，可以用下面方式
@@ -79,7 +48,7 @@
 [iOS自定义多参数类型方法 - 王小航 - 博客园](https://www.cnblogs.com/wanghang/p/6298878.html)
 
 
-
+# APP
 
 ## 多个对象执行方法
 
@@ -95,6 +64,87 @@
 }
 
 ```
+
+
+
+## AppDelegate启动业务逻辑模块化
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190305183550.png)
+
+```objc
+
+- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
+    //初始化window
+    [self initWindow];
+    
+    //初始化网络请求配置
+    [self NetWorkConfig];
+    
+    //UMeng初始化
+    [self initUMeng];
+    
+    //初始化app服务
+    [self initService];
+    
+    //初始化IM
+    [[IMManager sharedIMManager] initIM];
+    
+    //初始化用户系统
+    [self initUserManager];
+    
+    //网络监听
+    [self monitorNetworkStatus];
+    
+    //广告页
+    [AppManager appStart];
+    
+    return YES;
+}
+```
+
+
+
+## 快速初始化
+
+* 可变数组快速初始化
+
+```objc
+@property (nonatomic,strong) NSMutableArray * dataArray;//数据源
+_dataArray = @[].mutableCopy;
+
+```
+
+
+
+# UI
+
+## 导航的懒加载
+
+一种格格家的首页懒加载思路：
+
+* 每个子页面添加MJ的下拉刷新，在初始化页面的时候调用`MJRefresh`的`beginRefreshing`方法实现请求API。
+* 在每个子页面初始化的时候，因为还未显示`MJRefresh`,所以`beginRefreshing`无法立即执行；
+* 当点击tabar展示对应的自控制器的view的时，就会调用`beginRefreshing`，从而实现懒加载
+
+
+### 父子控制器
+
+![](https://i.loli.net/2018/11/01/5bda6e1f95c7b.jpg)
+
+发现在父子控制器层级中，viewWillAppear  viewDidAppear的顺序是
+
+* 父控制器-viewWillAppear
+* 子控制器-viewWillAppear
+* 子控制器-viewDidAppear
+* 父控制器-viewDidAppear
+
+![](https://i.loli.net/2018/11/01/5bda6d5712fd0.jpg)
+![](https://i.loli.net/2018/11/01/5bda6d752be2f.jpg)
+
+![](https://i.loli.net/2018/11/01/5bda6d4b26216.jpg)
+
+也就是说父控制器先初始化，会等其子控制完全显示后再调用viewDidAppear方法
+
 
 
 ## UITableCell展开，刷新闪烁
@@ -251,49 +301,108 @@ cell刷新会调`layoutSubviews`，这里如果再去调用`setNeedsLayout` ==> 
 
 
 
-## AppDelegate启动业务逻辑模块化
+# API请求
 
-![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190305183550.png)
+发现网络请求可以吧数据解析留在Model中，结合`YYModel`,可以将更少的代码写入。
 
 ```objc
+/**
+ *  返回result下item_list 数组模型
+ *
+ *  @param url          请求地址
+ *  @param param        请求参数
+ *  @param resultClass  需要转换返回的数据模型
+ *  @param success      请求成功后的回调（请将请求成功后想做的事情写到这个block中）
+ *  @param warn         请求失败后警告提示语（是一个字符串，直接弹出显示即可）
+ *  @param failure      请求失败后的回调（请将请求失败后想做的事情写到这个block中）
+ *  @param tokenInvalid token过期后的回调（请将token后想做的事情写到这个block中）
+ */
++ (void)postItemListWithUrl:(NSString *)url param:(id)param
+                resultClass:(Class)resultClass
+                    success:(void (^)(id result))success
+                       warn:(void (^)(NSString *warnMsg))warn
+                    failure:(void (^)(NSError *error))failure
+               tokenInvalid:(void (^)())tokenInvalid;
 
-- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
-    //初始化window
-    [self initWindow];
+
+/**
+ *  返回result 数据模型
+ *
+ *  @param url          请求地址
+ *  @param param        请求参数
+ *  @param resultClass  需要转换返回的数据模型
+ *  @param success      请求成功后的回调（请将请求成功后想做的事情写到这个block中）
+ *  @param warn         请求失败后警告提示语（是一个字符串，直接弹出显示即可）
+ *  @param failure      请求失败后的回调（请将请求失败后想做的事情写到这个block中）
+ *  @param tokenInvalid token过期后的回调（请将token后想做的事情写到这个block中）
+ */
+- (void)postResultWithUrl:(NSString *)url param:(id)param
+              resultClass:(Class)resultClass
+                  success:(void (^)(id result))success
+                     warn:(void (^)(NSString *warnMsg))warn
+                  failure:(void (^)(NSError *error))failure
+             tokenInvalid:(void (^)())tokenInvalid;
+
+/**
+ *  返回result 数据模型
+ */
+- (void)postResultWithUrl:(NSString *)url param:(id)param
+              resultClass:(Class)resultClass
+                  success:(void (^)(id result))success
+                     warn:(void (^)(NSString *warnMsg))warn
+                  failure:(void (^)(NSError *error))failure
+             tokenInvalid:(void (^)())tokenInvalid
+{
     
-    //初始化网络请求配置
-    [self NetWorkConfig];
-    
-    //UMeng初始化
-    [self initUMeng];
-    
-    //初始化app服务
-    [self initService];
-    
-    //初始化IM
-    [[IMManager sharedIMManager] initIM];
-    
-    //初始化用户系统
-    [self initUserManager];
-    
-    //网络监听
-    [self monitorNetworkStatus];
-    
-    //广告页
-    [AppManager appStart];
-    
-    return YES;
+    [self postBaseWithUrl:url param:param resultClass:resultClass
+                  success:^(id responseObj) {
+                      if (!resultClass) {
+                          success(nil);
+                          return;
+                      }
+                      success([resultClass mj_objectArrayWithKeyValuesArray:responseObj[@"result"]]);
+                  }
+                     warn:warn
+                  failure:failure
+             tokenInvalid:tokenInvalid];
 }
-```
 
 
+/**
+ *  数据模型基类方法
+ */
+- (void)postBaseWithUrl:(NSString *)url param:(id)param
+            resultClass:(Class)resultClass
+                success:(void (^)(id result))success
+                   warn:(void (^)(NSString *warnMsg))warn
+                failure:(void (^)(NSError *error))failure
+           tokenInvalid:(void (^)())tokenInvalid
+{
+//    url = [NSString stringWithFormat:@"%@%@",Host,url];
+    CYXLog(@"\n请求链接地址---> %@",url);
+    //状态栏菊花
+    [UIApplication sharedApplication].networkActivityIndicatorVisible = YES;
+    
+    CYXHttpRequest *httpRequest = [[CYXHttpRequest alloc]init];
+    
+    [httpRequest post:url params:param success:^(id responseObj) {
+        if (success) {
+            NSDictionary *dictData = [NSJSONSerialization JSONObjectWithData:responseObj options:kNilOptions error:nil];
+            CYXLog(@"请求成功，返回数据 : %@",dictData);
+            success(dictData);
 
-## 快速初始化
+        }
+        //状态栏菊花
+        [UIApplication sharedApplication].networkActivityIndicatorVisible = NO;
+    } failure:^(NSError *error) {
+        if (failure) {
+            failure(error);
+            CYXLog(@"请求失败：%@",error);
+        }
+        //状态栏菊花
+        [UIApplication sharedApplication].networkActivityIndicatorVisible = NO;
+    }];
+}
 
-* 可变数组快速初始化
-
-```objc
-@property (nonatomic,strong) NSMutableArray * dataArray;//数据源
-_dataArray = @[].mutableCopy;
 
 ```
