--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -38,10 +38,7 @@ self.ghostButton3.adjustsImageWithGhostColor = YES;
     2. QMUIAlbumViewController
 
 
-
-# UI
-
-## App配置
+# App配置
 
 ### App启动开屏
 
@@ -69,6 +66,12 @@ self.ghostButton3.adjustsImageWithGhostColor = YES;
 ### App Hud
 
 [SVProgressHUD](https://github.com/SVProgressHUD/SVProgressHUD/tree/e2a6aaa12321962cbe9fbecc370475f369c6566c)
+
+###  夜间模式
+
+[draveness/DKNightVersion: Manage Colors, Integrate Night/Multiple Themes](https://github.com/Draveness/DKNightVersion)
+
+# UI
 
 ## 文案
 
@@ -231,6 +234,13 @@ The basics of a swipeable card interface inspired by Tinder
 push和pop转场动画基本流程
 * https://github.com/cnthinkcode/HSPresentTransitionDemo
 * https://www.jianshu.com/p/4d2fea0f6ecc
+
+
+#  工具
+
+`BlocksKit`
+
+* [analyze/神奇的 BlocksKit （一）.md at master · draveness/analyze](https://github.com/draveness/analyze/blob/master/contents/BlocksKit/%E7%A5%9E%E5%A5%87%E7%9A%84%20BlocksKit%20%EF%BC%88%E4%B8%80%EF%BC%89.md)
 
 
 # Web
