--- a/1-iOSCocoa💎/底层重点知识/变量类型.md
+++ b/1-iOSCocoa💎/底层重点知识/变量类型.md
@@ -140,6 +140,78 @@ NSString*sttr1=@"S1ViewController";//全局变量
 在其他文件如果要用该全局变量，在前面加extern NSString*sttr1；即可使用了
 
 
+## iOS下划线变量
+
+Xcode4后 编译器自动建立了一个关联的实例变量， _x 就是那个自动创建的实例变量。
+
+有一堆隐藏的(简化）代码如下：
+
+```objc
+NSString *_x;
+
+-(NSString *)x {
+    return _x;
+}
+
+-(void)setX:(NSString *)x {
+    _x = x；
+}
+
+```
+
+所以，`@synthesize x = _x;`做的就是实现桑面的代码。
+
+[ios - Purpose of Synthesize - Stack Overflow](https://stackoverflow.com/questions/14658142/purpose-of-synthesize)
+
+1. 首先通过self.xxx 通过访问的方法的引用：包含了set和get方法。而通过下划线是获取自己的实例变量，不包含set和get的方法。
+
+2. self.xxx是对属性的访问；而_xxx是对局部变量的访问。所有被声明为属性的成员，再ios5之前需要使用编译指令@synthesize 来告诉编译器帮助生成属性的getter和setter方法，之后这个指令可以不用认为的指定了，默认情况下编译器会帮助我们生成。编译器在生成getter，setter方法时是有优先级的，他首先查找当前的类中用户是否定义属性的getter，setter方法，如果有，则编译器会跳过，不会再生成，使用用户定义的方法。也就是说你在使用self.xxx时是调用一个getter方法。会使引用计数加一，而_xxx不会使用引用技术加一的。    所有使用self.xxx是更好的选择，因为这样可以兼容懒加载，同时也避免了使用下滑线的时候忽略了self这个指针，后者容易在BLock中造成循环引用。同时，使用 _是获取不到父类的属性，因为它只是对局部变量的访问。
+
+3. 最后总结：self方法实际上是用了get和set方法间接调用，下划线方法是直接对变量操作。
+
+
+### property
+
+编译器会自动写出一套存取方法，用以访问给定类型中具有给定名称的变量。 所以你也可以这么说：
+
+```
+@property = ivar + getter + setter;
+```
+
+“属性” (property)有两大概念：ivar（实例变量）、存取方法（access method ＝ getter + setter）。
+
+
+“自动合成”( autosynthesis)
+
+完成属性定义后，编译器会自动编写访问这些属性所需的方法，此过程叫做“自动合成”(autosynthesis)。需要强调的是，这个过程由编译 器在编译期执行，所以编辑器里看不到这些“合成方法”(synthesized method)的源代码。**除了生成方法代码 getter、setter 之外，编译器还要自动向类中添加适当类型的实例变量，并且在属性名前面加下划线，以此作为实例变量的名字**。在前例中，会生成两个实例变量，其名称分别为 _firstName 与 _lastName。也可以在类的实现代码里通过 @synthesize 语法来指定实例变量的名字.
+
+
+### 应用场景
+
+* 私有变量
+对外只读，就不会生成setter，如果需要重写getter方法，可以
+```objc
+// .h
+@property(nonatomic, strong, readonly) NSObject *privateObj;
+// .m
+@synthesize privateObj = _privateObj;
+
+```
+
+[iOS 实现只读属性的几种方法 - 简书](https://www.jianshu.com/p/3033b306126a)
+
+
+### @protocol 和 category 中如何使用 @property
+
+* 在 protocol 中使用 property 只会生成 setter 和 getter 方法声明,我们使用属性的目的,是希望遵守我协议的对象能实现该属性
+
+* category 使用 @property 也是只会生成 setter 和 getter 方法的声明,如果我们真的需要给 category 增加属性的实现,需要借助于运行时的两个函数：
+
+* objc_setAssociatedObject
+
+* objc_getAssociatedObject
+
+
 
 ## 参考
 
