--- a/项目相关/项目心得.md
+++ b/项目相关/项目心得.md
@@ -403,6 +403,24 @@ cell刷新会调`layoutSubviews`，这里如果再去调用`setNeedsLayout` ==> 
         [UIApplication sharedApplication].networkActivityIndicatorVisible = NO;
     }];
 }
+```
 
+
+## Data
+
+私有变量
+
+```objc
+// .h
+@property(nonatomic, strong, readonly) NSObject *privateObj;
+// .m
+@synthesize privateObj = _privateObj;
 
 ```
+
+当我们将属性设置为只读时，这时就不会再生成setter方法，只有getter方法，所以我们在实现文件中就不能再通过点语法来对其直接赋值。这是我们可以通过下面几种方式来赋值。
+
+当我们声明一个 readonly 的属性，外部可能会通过 KVC 修改该属性值。
+为了避免 KVC 修改属性值，须将定义属性所在类的类方法 + (BOOL)accessInstanceVariablesDirectly 重写，使其返回 NO.
+
+[iOS 实现只读属性的几种方法 - 简书](https://www.jianshu.com/p/3033b306126a)
