--- a/1-iOSCocoa💎/底层重点知识/变量类型.md
+++ b/1-iOSCocoa💎/底层重点知识/变量类型.md
@@ -128,9 +128,10 @@ NSString *str1= @"S1ViewController";// 全局变量
 ```
 
 全局变量分为两种
-1）static 修饰的  也称私有全局变量，只在该源文件中可用
 
-2）没有static 修饰的 ，在任何源文件中都可以用，注意：定义没有static的全局变量，命名一定要很独特，才能区分与其他源文件中的全局变量，如果出现跟其他源文件同名的全局变量，则会报错误
+* static 修饰的  也称私有全局变量，只在该源文件中可用
+* 没有static 修饰的 ，在任何源文件中都可以用，
+* 注意：定义没有static的全局变量，命名一定要很独特，才能区分与其他源文件中的全局变量，如果出现跟其他源文件同名的全局变量，则会报错误
 
 例如：
 ```objc
@@ -139,6 +140,14 @@ NSString*sttr1=@"S1ViewController";//全局变量
 
 在其他文件如果要用该全局变量，在前面加extern NSString*sttr1；即可使用了
 
+
+### static变量
+
+* (1) 函数体内static变量的作用范围为该函数体，不同于auto变量，该变量的内存只被分配一次,因此其值在下次调用时仍维持上次的值;
+* (2) 在模块内的static 全局变量可以被模块内所用函数访问，但不能被模块外其它函数访问;
+* (3) 在模块内的static函数只可被这一模块内的其它函数调用，这个函数的使用范围被限制在声明它的模块内;
+* (4) 在类中的static成员变量属于整个类所拥有，对类的所有对象只有一份拷贝;
+* (5) 在类中的static 成员函数属于整个类所拥有，这个函数不接收this指针，因而只能访问类的static成员变量。
 
 ## iOS下划线变量
 
