--- a/1-iOSCocoa💎/数据存储/解析-沙盒机制.md
+++ b/1-iOSCocoa💎/数据存储/解析-沙盒机制.md
@@ -24,7 +24,7 @@ NSString *path = NSHomeDirectory();
  - Preferences 目录：包含应用程序的偏好设置文件。您不应该直接创建偏好设置文件，而是应该使用NSUserDefaults类来取得和设置应用程序的偏好.
  - Caches 目录：用于存放应用程序专用的支持文件，保存应用程序再次启动过程中需要的信息。可创建子文件夹。**可以用来放置您希望被备份但不希望被用户看到的数据**。该路径下的文件夹，除Caches以外，都会被iTunes备份。
 
-4. tmp 目录：这个目录用于存放临时文件，保存应用程序再次启动过程中不需要的信息。该路径下的文件不会被iTunes备份。
+1. tmp 目录：这个目录用于存放临时文件，保存应用程序再次启动过程中不需要的信息。该路径下的文件不会被iTunes备份。// NSUserDefaults就存储在􏶑􏲞􏰲􏰢􏵃􏲖tmp􏰢􏵃􏾩中?
 
 ### 二、获取各种文件目录的路径
 
