--- a/代码回顾-性能优化/解析-设计模式.md
+++ b/代码回顾-性能优化/解析-设计模式.md
@@ -2,6 +2,160 @@
 
 # 解析-设计模式
 
+
+TODO:
+
+[关于 23 种设计模式的有趣见解 - 文章 - 伯乐在线](http://blog.jobbole.com/20496/)
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314175913.png)
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314180004.png)
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314180054.png)
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314180150.png)
+
+设计模式: MVC模式、单例模式、观察者模式、MWM模式、工厂模式、代理模式、策略模式、
+适配器模式、模板模式、外观模式、创建模式
+
+### MVC模式
+
+
+mvc模式: model保存应用模型和处理数据逻辑、view 负责model数据和交互控件的显示、
+controller负责model和View之间的通讯
+
+### 单例模式
+
+单例模式:用一个静态方法返回这个类的对象。系统只需要拥有一个的全局对象，这样有利于我
+们协调系统整体的行为，这个对象是全局唯一-的。 整个项目里面之开辟一块内层、方便传值和修改单例的属性，比如登录之后获取的用户数据存储、NSNotificationcenter、 NSLJserdefaults,
+sharedApplication缺点是这块内层直到项目推出时才能释放。应用场景:确保程序运行期某个
+类，只有一份实例，用于进行资源共享控制。优势:使用简单，延时求值，易于跨模块敏捷原
+则:单一职责原则注意事项:确保使用者只能通过getInstance方法才能获得，单例类的唯一实
+例。java, C++中使其没有公有构造函数，私有化并覆盖其构造函数。object c中，重写.
+allocWithZone方法，保证即使用户用alloc方法直接创建单例类的实例，返回的也只是此单例类
+的唯-静态变量。
+
+### MVVM模式
+
+mvm模式: vm直接通讯一般使用RAC
+
+视图(View)、视图模 型(ViewModel)、模型(Model)三部分组成
+使用MVVM模式有几大好处:
+1.低耦合。View可以独立于Model变化和修改，一个ViewModel可 以绑定到不同的View上，当
+View变化的时候Model可以不变，当Model变化的时候View也可以不变 。
+2.可重用性。可以把一些视图的逻辑放在ViewModel里面，让很多View重用这段视图逻辑。
+3.独立开发。开发人员可以专注与业务逻辑和数据的开发(ViewModel)。设计人员可以专注于界
+面(View)的设计。
+4.可测试性。可以针对ViewModel来对 界面(View)进行测试
+5.在ios上使用MWM的动机,就是让它能减少View Controller的复杂性并使得表示逻辑更易于
+测试
+6.将网络请求抽象到单独的类中
+7.将界面的拼装抽象到专门的类中
+8.构造ViewModel具体做法就是将ViewController 给View传递数据这个过程，抽象成构造
+ViewModel的过程。抽象之后，View 只接受ViewModel,而Controller 只需要传递ViewModel
+这么一行代码。而另外构造ViewModel的过程，我们就可以移动到另外的类中了。
+9. MVC设计模式中的ViewController进一步拆分， 构造出网络请求层、ViewModel 层、Service
+层、Storage 层等其它类，来配合Controller 工作，从而使Controller更加简单，我们的App更
+容易维护。Controller 的代码抽取出来，是有助于我们做测试工作的。
+10.ViewModel:存放各种业务逻辑和网络请求
+在MVC里，View 是可以直接访问Model的!从而，View里会包含Model信息，不可避免的还要包
+括一些业务逻辑。MVC模 型关注的是Model的不变，所以，在MVC模型里，Model不依赖于
+View,但是View是依赖于Model的。不仅如此，因为有一些业务逻辑在View里实现了，导致要更
+改View也是比较困难的，至少那些业务逻辑是无法重用的。
+MWM在概念上是真正将页面与数据逻辑分离的模式，它把数据绑定工作放到一-个JS里去实现,
+而这个JS文件的主要功能是完成数据的绑定，即把model绑定 到U的元素上。
+有人做过测试:使用Angular (MWM)代替Backbone (MVC) 来开发，代码可以减少一半。
+此外，MVM另一个重要特性，双向绑定。它更方便你同时维护页面上都依赖于某个字段的N个
+区域，而不用手动更新它们。
+总结:
+
+优点: MWVM就是在MVC的基础上加入了一个视图模型viewModel,用于数据有效性的验证，视
+图的展示逻辑，网络数据请求及处理，其他的数据处理逻辑集合，并定下相关接口和协议。相
+比起MVC, MWM中vc的职责和复杂度更小，对数据处理逻辑的测试更加方便，对bug的原因排
+查更加方便，代码可阅读性，重用性和可维护性更高。MVVM耦合性更低。MWM不同层级的职
+责更加明确，更有利于代码的编写和团队的协作。缺点: MVVM相比MVC代码量有所增加。
+MVVM相比MVC在代码编写之前需要有更清晰的模式思路。
+
+
+
+(4)观察者模式
+2.观察者模式:通过添加观察者来观察某个对象的实例变量的变化、当该被观察的对象的实例变
+量发生时，观察者响应observeValueForKeyPath方法，如常用的导航栏渐变。应用场景:一般
+为model层对controller和view进行的通知方式，不关心谁去接收，只负责发布信息。优势:解耦合敏捷原则:接口隔离原则，开放-封闭原则实例: Notification通知中心， 注册通知中心任何位置可以发送消息，注册观察者的对象可以接收。
+
+
+### 工厂模式
+
+3.工厂模式:快速创建对象的方式。将对象的创建和属性赋值封装成类方法，如:**创建常用按
+钮、textFeild等，forState这些枚举值不用反复写， 可以使调用工厂方法的地方代码更加简洁。**
+应用场景:工厂方式创建类的实例，多与proxy模式配合，创建可替换代理类。
+优势:易于替换，面向抽象编程，application只与 抽象工厂和易变类的共性抽象类发生调用关
+系。
+敏捷原则: DIP依赖倒置原则
+实例:项目部署环境中依赖多个不同类型的数据库时，需要使用工厂配合proxy完成易用性替换
+注意事项:项目初期，软件结构和需求都没有稳定下来时，不建议使用此模式，因为其劣势也很
+明显，
+增加了代码的复杂度，增加了调用层次，增加了内存负担。所以要注意防止模式的滥用。
+(6)代理模式
+代理模式:代理模式给某一个对象提供一个代理对象，并由代理对象控制对源对象的引用。比如
+一个工厂生产了产品，并不想直接卖给用户，而是搞了很多代理商，用户可以直接找代理商买东
+西，代理商从工厂进货。常见的如QQ的自动回复就属于代理拦截，代理模式在iphone中得到广
+泛应用。有点像c++中多继承。增加对象的方法和属性。代理模式使项目的逻辑结构比较直观,
+比如tableView的delegate和DataSource。优势:解耦合敏捷原则:开放封闭原则。代理的目的
+是改变或传递控制链，允许一个类在某些特定时刻通知到其他类，而不需要获取到那些类的指
+
+
+针,可以减少框架复杂度和耦合度。另外一点，代理可以理解为java中的回调监听机制的一种类
+似。
+### 策略模式
+7.策略模式:把一些独立的算法单独封装起来，如我以前有个车管的app里面根据北斗定位步标
+设备最后- -次上传数据库的时间和车辆状态，来解析车辆当前的状态，数据库中的16进制的状态
+(应用的是交通部的808协议) , 移动端获得将此状态字段转换成2进制，判断出车辆的24中状
+态。cell多种响应效果
+应用场景:定义算法族，封装起来,使他们之间可以相互替换。优势:使算法的变化独立于使用
+算法的用户
+敏捷原则:接口隔离原则;多用组合，少用继承;针对接口编程，而非实现。
+实例:排序算法，NSArray的sortedArrayUsingSelector; 经典的鸭子会叫，会飞案例。注意事
+项: 1,剥离类中易于变化的行为，通过组合的方式嵌入抽象基类
+变化的行为抽象基类为，所有可变变化的父类
+用户类的最终实例，通过注入行为实例的方式，设定易变行为
+(8)适配器模式
+8.适配器模式:根据不同的场景选择不同的对象，不如接手了一个旧代码，一 进公司就得修改需
+求，这时候的代码逻辑没法去反复理解，如我的一个老项目里面有-个认证功能将货主认证的
+model和车主认证model放同一个model里面，现在需要增加货主认证model属性修改，此时就可
+以使用适配器了，原来其他地方还是走货住认证，因为企业也是货主的一种，可以建一个新的货
+主model新需求走新的货主认证。
+(9)模版模式
+9.模板模式:比如现在的项目建的基类baseViewController, base' TableViewController,
+(10)外观模式
+10.外观模式:专门为外部提供子类模块功能的api类，如果保险下单，只需要支付用你选的支付
+方式和保险种类及填写的保险的必要信息一起传给下单的外观对象即可，在外观类里面封装了有
+下单和支付两个子步簇，只需要将下保险的是否成功的结果返给下单界面就行。
+(11)创建模式
+11.创建模式:将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表
+示，假如在一个工具对象内对轨迹点去重复、纠偏、漂移过滤等，例加-一个对象对外提供该时间
+段轨迹停车时长和平均速度、平局耗油量等参数的接口。拿到数组点在地图上展示一下就可以
+了，此数组对象的生成和使用可以分开。当然了这些复杂的操作都在服务端做了。
+(12) MVP模式
+MVP模式从经典的MVC模式演变而来，将Controller替 换成Presenter,依据MVP百度百科中的解
+释，MVP的优点相比较于MVC是完全分离Model与View, Model与 View的信息传递只能通过
+CotrllerPresenter,我查阅资料发现在其他平台上的MVC模式View与Model能否直接通讯有着
+不同的说法，但在iOS开发中，Apple是这么说的。在MVC下，所有的对象被归类为一个model,
+一个view, 或一个controller。 Model持 有数据，View 显示与用户交互的界面，而View Controller调
+解Model和View之间的交互，在iOS开 发中我按照Model与View无法相互通讯来理解。
+
+MVM中，我们将视图处理逻辑从C中剥离出来给V，剩下的业务逻辑部分被称做View-Model。
+使用MWM模式的iOS应用的可测试性要好于MVC，因为ViewModel中并不 包含对View的更新，
+相比于MVC,减轻了Controller的负担，使功能划分更加合理。
+我们应该为app delegate的根视图创建一个ViewModel, 当我们要生成或展示另一一个次级
+ViewController时，采用当前的ViewModel为其创建一个 子ViewModel。
+viewModel tableView的布局实现，主要是计算行高。
+ListViewModel加载网络数据，缓存图片，用调度组实现。监听下载完成，异步回调。
+
+
+
+## 大话设计模式
+
+
 [创建型模式 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/creational_patterns/creational.html#creational)
 
 ## 创建型模式
@@ -647,13 +801,10 @@ MVC模式是一种架构模式，它包含三个角色：模型(Model)，视图(
 *   ConcreteStrategy: 具体策略类
 
 
-
 ## 参考
 
 1. [细说@synchronized和dispatch_once - 简书](https://www.jianshu.com/p/ef3f77c8b320)
 2. [由 NSObject *obj 引发的一二事儿 - 掘金](https://juejin.im/post/5b63b857e51d455f5f4d1d74)
-
-
 
 
 
