--- a/代码回顾-性能优化/解析-性能优化.md
+++ b/代码回顾-性能优化/解析-性能优化.md
@@ -47,14 +47,9 @@
 * 尽量少用addView给Cell动态添加View，可以初始化时就添加，然后通过hide来控制是否显示
 
 
-#### 减少 cell 内部控件的层级
-
-我们先来看一下一个带有原贴的转发贴的布局：
-
-![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349205601148.jpg)
 
 
-#### 布局
+### 布局
 
 可能有小伙伴会将上中下这三个部分各自封装成一个 view，再通过每个 view 来管理各自的子 view。但是这个框架的作者却将它们都排列到一层上。
 
@@ -63,8 +58,27 @@
 
 1. 通过覆盖圆角图片来实现头像的圆角效果
 2. 在 cellForRow: 方法里只加载可见 cell
+3. 
+#### 减少 cell 内部控件的层级
+
+我们先来看一下一个带有原贴的转发贴的布局：
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349205601148.jpg)
+
+#### 渲染
+
+#### 图片渲染
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314204845.png)
+
+
+#### 离屏渲染优化
+
+* 圆角优化
+
 
 #### 滑动UITableView时，按需加载对应的内容
+
 直接上代码：
 
 ```objc
