--- a/性能优化/解析-组件化开发项目框架设计.md
+++ b/性能优化/解析-组件化开发项目框架设计.md
@@ -6,6 +6,51 @@
 [iOS组件化实践(一)：简介 - 简书](https://www.jianshu.com/p/568e875abd48)
 [iOS组件化实践(三)：实施 - 简书](https://www.jianshu.com/p/0a7f3c0b4194)
 
+## SOLID原则
+
+对于iOS这种面向对象编程的开发模式来说，我们应该遵循以下五个原则，即SOLID原则。
+
+* 单一功能原则: 对象功能要单一，不要在一个对象里添加很多功能。
+* 开闭原则: 扩展是开放的，修改是封闭的。
+* 里氏替换原则: 子类对象是可以替代基类对象的。
+* 接口隔离原则: 接口的用途要单一，不要在一个接口上根据不同入参实现多个功能。
+* 依赖反转原则: 方法应该依赖抽象，不要依赖实例。ioS开发就是高层业务方法依赖于协议。
+同时，遵守这五个原则是开发出容易维护和扩展的架构的基础。
+
+### 组件化开发团队
+
+* 首先，**需要一个专门的基建团队**，负责业务无关的基础功能组件和业务相关通用业务组件开发。
+* 然后，**每个业务都由一个专门的团队来负责开发**。业务可以按照功能耦合度来划分，耦合度高的业务可以划分成单独的业务团队。
+* 基建团队人员应该是流动的，从业务团队里来，再回到业务团队中去。这么设计是因为业务团队和基建团队的边界不应该非常明显，否则就会出现基建团队埋头苦干，结果可能是做得过多、做得不够，或着功能不好用的问题，造成严重的资源浪费。
+
+### 组件化架构
+
+* 协议式
+
+协议式架构设计主要采用的是协议式编程的思路: **在编译层面使用协议定义规范，实现可在不同地方，从而达到分布管理和维护组件的目的**。这种方式也遵循了依赖反转原则，是一种很好的面向对象编程的实践。
+
+但是，这个方案的缺点也很明显，主要体现在以下两个方面:
+
+1. 由于协议式编程缺少统一调度层，导致难于集中管理，特别是项目规模变大、团队变多的情况下，架构管控就会显得越来越重要。
+2. 协议式编程接口定义模式过于规范，从而使得架构的灵活性不够高。当需要引入一个新的设计模式来开发时，我们就会发现很难融入到当前架构中，缺乏架构的统一性。
+
+虽然协议式架构有这两方面的局限性，但由于其简单易用的特点依然被很多公司采用。
+
+* 中间者
+
+另一种常用的架构形式是中间者架构。
+* 它采用中间者统一管理的方式，来控制App的整个生命周期中组件间的调用关系。
+* 同时，iOS对于组件接口的设计也需要保持一致性， 方便中间者统一调用。
+
+中间者架构如下图所示:
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190319095520.png)
+
+
+* 可以看到，拆分的组件都会依赖于中间者，但是组间之间就不存在相互依赖的关系了。由于其他组件都会依赖于这个中间者，相互间的通信都会通过中间者统一调度，所以组件间的通信也就更容易管理了。在中间者上也能够轻松添加新的设计模式，从而使得架构更容易扩展。
+
+* 在我看来，好的架构一定是健壮的、灵活的。中间者架构的易管控带来的架构更稳固，易扩展带来的灵活性，所以我认为中间者这种架构设计模式是非常值得推荐的。casatwy 以前设计了一个[CTMediator](https://github.com/casatwy/CTMediator)就是按照中间者架构思路设计的。你可以在GitHub.上看到它的内容。
+
 ## 参考组件库
 
 [wangshiyu13/Lothar: 基于CTMediator的组件化中间件](https://github.com/wangshiyu13/Lothar)
@@ -17,8 +62,6 @@
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190203203917.png)
 
 # iOS从零到一搭建组件化项目架构
-
-
 
 > 随着公司业务需求的不断迭代发展，工程的代码量和业务逻辑也越来越多，原始的开发模式和架构已经无法满足我们的业务发展速度了，这时我们就需要将原始项目进行一次重构大手术了。这时我们应该很清晰这次手术的动刀口在哪，就是之前的高度耦合的业务组件和功能组件，手术的目的就是将这些耦合拆分成互相独立的各个组件。
 
