整理-代码规范

--- a/性能优化/解析-组件化开发项目框架设计.md
+++ b/性能优化/解析-组件化开发项目框架设计.md
@@ -51,9 +51,6 @@
 
 * 在我看来，好的架构一定是健壮的、灵活的。中间者架构的易管控带来的架构更稳固，易扩展带来的灵活性，所以我认为中间者这种架构设计模式是非常值得推荐的。casatwy 以前设计了一个[CTMediator](https://github.com/casatwy/CTMediator)就是按照中间者架构思路设计的。你可以在GitHub.上看到它的内容。
 
-## 参考组件库
-
-[wangshiyu13/Lothar: 基于CTMediator的组件化中间件](https://github.com/wangshiyu13/Lothar)
 
 
 ## 静态库和动态库
@@ -380,16 +377,44 @@ end
 
 ![image](http://upload-images.jianshu.io/upload_images/6342050-6db65dfbc259432d.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+### 组件集成
 
-# 总结
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190319153955.png)
+
+* 每个组件都是一个单独的工程，在组件开发完成后上传到git仓库。主工程通过Cocoapods集成各个组件，集成和更新组件时只需要pod update即可。这样就是把每个组件当做第三方来管理，管理起来非常方便。
+* Cocoapods可以控制每个组件的版本，例如在主项目中回滚某个组件到特定版本，就可以通过修改podfile文件实现。选择Cocoapods主要因为其本身功能很强大，可以很方便的集成整个项目，也有利于代码的复用。通过这种集成方式，可以很好的避免在传统项目中代码冲突的问题。
+
+
+### 组件化优点
+
+* 组件化开发可以很好的提升代码复用性，组件可以直接拿到其他项目中使用，这个优点在下面淘宝架构中会着重讲一下。
+* 对于调试工作，可以放在每个组件中完成。单独的业务组件可以直接提交给测试使用，这样测试起来也比较方便。最后组件开发完成并测试通过后，再将所有组件更新到主项目，提交给测试进行集成测试即可。
+* 通过这样的组件划分，组件的开发进度不会受其他业务的影响，可以多个组件并行开发。组件间的通信都交给中间件来进行，需要通信的类只需要接触中间件，而中间件不需要耦合其他组件，这就实现了组件间的解耦。中间件负责处理所有组件之间的调度，在所有组件之间起到控制核心的作用。
+* 组件化框架清晰的划分了不同模块，从整体架构上来约束开发人员进行组件化开发，实现了组件间的物理隔离。组件化架构在各个模块之间天然形成了一道屏障，避免某个开发人员偷懒直接引用头文件，产生组件间的耦合，破坏整体架构。
+* 使用组件化架构进行开发时，因为每个人都负责自己的组件，代码提交也只提交自己负责模块的仓库，所以代码冲突的问题会变得很少。
+* 假设以后某个业务发生大的改变，需要对相关代码进行重构，可以在单个组件内进行重构。组件化架构降低了重构的风险，保证了代码的健壮性。
+
+
+## 参考组件库
+
+[wangshiyu13/Lothar: 基于CTMediator的组件化中间件](https://github.com/wangshiyu13/Lothar)
+
+
+## 总结
+
+
 > 上面我们讲解的只是简单的项目组件化架构的基础框架搭建，但是在真正的企业开发中，我们只搭建这样一个简单项目框架结构还远远不能满足需求的开发，我们还需要在项目框架中添枝加叶来满足现有需求。在上面提供的示例Demo中，我将电子发票业务组件独立成一个完整的工程，并结合了当下比较流行的MVVM设计模式和RAC数据绑定框架来实现电子发票模块的功能开发。如果有小伙们对 MVVM + RAC 实战开发感兴趣的，可以单独 install 电子发票工程查看，工程地址:[iOS-MVVM-RAC](https://github.com/guangqiang-liu/iOS-MVVM-RAC)
 
 
-##### 好了，又写到凌晨了，不早了，本篇教程到此就讲完了。下篇教程讲解如何使用MVVM+RAC进行实战开发。小伙伴们，感觉文章对你有帮忙，简书点个赞呗，组件化开源项目 [iOS-Component-Pro](https://github.com/guangqiang-liu/iOS-Component-Demo) 也帮忙点个 star 吧，先谢过。
+
+组件化开源项目 [iOS-Component-Pro](https://github.com/guangqiang-liu/iOS-Component-Demo)
 
 [掘金专栏文章详解](https://juejin.im/post/5ba3cc0df265da0aac6fdaa0)
 
 ## 参考文献
+
+
 > 本篇文章主要借鉴了casatwy的CTMediator思想重新实践了一遍，下面也有蘑菇街的MGJRouter 和 阿里的 BeeHive 供大家学习参考。
 
 * https://casatwy.com/modulization_in_action.html
