update代码规范+ 组件化架构

--- a/性能优化/解析-组件化开发项目框架设计.md
+++ b/性能优化/解析-组件化开发项目框架设计.md
@@ -23,7 +23,7 @@
 * 然后，**每个业务都由一个专门的团队来负责开发**。业务可以按照功能耦合度来划分，耦合度高的业务可以划分成单独的业务团队。
 * 基建团队人员应该是流动的，从业务团队里来，再回到业务团队中去。这么设计是因为业务团队和基建团队的边界不应该非常明显，否则就会出现基建团队埋头苦干，结果可能是做得过多、做得不够，或着功能不好用的问题，造成严重的资源浪费。
 
-### 组件化架构
+## 组件化架构
 
 * 协议式
 
@@ -51,10 +51,32 @@
 
 * 在我看来，好的架构一定是健壮的、灵活的。中间者架构的易管控带来的架构更稳固，易扩展带来的灵活性，所以我认为中间者这种架构设计模式是非常值得推荐的。casatwy 以前设计了一个[CTMediator](https://github.com/casatwy/CTMediator)就是按照中间者架构思路设计的。你可以在GitHub.上看到它的内容。
 
+### 大厂组件化参考
+
+* 淘宝
+
+* 淘宝架构的核心思想是一切皆组件，将工程中所有代码都抽象为组件。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190319181223.png)
+
+* 淘宝架构主要分为四层，最上层是组件Bundle(业务组件)，依次往下是容器(核心层)，中间件Bundle(功能封装)，基础库Bundle(底层库)。容器层为整个架构的核心，负责组件间的调度和消息派发。
+
+* 总线设计：URL路由+服务+消息。统一所有组件的通信标准，各个业务间通过总线进行通信。
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190319181345.png)
+
+URL总线
+通过URL总线对三端进行了统一，一个URL可以调起iOS、Android、前端三个平台，产品运营和服务器只需要下发一套URL即可调用对应的组件。
+URL路由可以发起请求也可以接受返回值，和MGJRouter差不多。URL路由请求可以被解析就直接拿来使用，如果不能被解析就跳转H5页面。这样就完成了一个对不存在组件调用的兼容，使用户手中比较老的版本依然可以显示新的组件。
+服务提供一些公共服务，由服务方组件负责实现，通过Protocol进行调用。
+消息总线
+应用通过消息总线进行事件的中心分发，类似于iOS的通知机制。例如客户端前后台切换，则可以通过消息总线分发到接收消息的组件。因为通过URLRouter只是一对一的进行消息派发和调度，如果多次注册同一个URL，则会被覆盖掉。
+Bundle App
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190319181441.png)
+
 
 
 ## 静态库和动态库
-
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190203203917.png)
 
@@ -402,7 +424,6 @@ end
 
 
 ## 总结
-
 
 > 上面我们讲解的只是简单的项目组件化架构的基础框架搭建，但是在真正的企业开发中，我们只搭建这样一个简单项目框架结构还远远不能满足需求的开发，我们还需要在项目框架中添枝加叶来满足现有需求。在上面提供的示例Demo中，我将电子发票业务组件独立成一个完整的工程，并结合了当下比较流行的MVVM设计模式和RAC数据绑定框架来实现电子发票模块的功能开发。如果有小伙们对 MVVM + RAC 实战开发感兴趣的，可以单独 install 电子发票工程查看，工程地址:[iOS-MVVM-RAC](https://github.com/guangqiang-liu/iOS-MVVM-RAC)
 
