--- a/性能优化/解析-组件化架构.md
+++ b/性能优化/解析-组件化架构.md
@@ -1,5 +1,10 @@
 # 组件化架构
 
+## 组件化Demo
+
+CTMediator 方式
+* [guangqiang-liu/iOS-Component-Pro: iOS 组件化开发项目框架设计，结合 MVVM 设计模式 + RAC 数据绑定 + Pod 组件管理， 实现一套实战性的iOS组件化框架](https://github.com/guangqiang-liu/iOS-Component-Pro)
+
 ## 组件化架构的由来
 
 随着移动互联网的不断发展，**很多程序代码量和业务越来越多，现有架构已经不适合公司业务的发展速度了**，很多都面临着重构的问题。
