--- a/性能优化/解析-设计模式.md
+++ b/性能优化/解析-设计模式.md
@@ -2,10 +2,10 @@
 
 # 解析-设计模式
 
-
 TODO:
 
-[关于 23 种设计模式的有趣见解 - 文章 - 伯乐在线](http://blog.jobbole.com/20496/)
+* [面向对象设计的设计模式（三）：行为型模式（附 Demo 及 UML 类图） | J_Knight_](https://knightsj.github.io/2019/03/17/%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E8%AE%BE%E8%AE%A1%E7%9A%84%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%EF%BC%88%E4%B8%89%EF%BC%89%EF%BC%9A%E8%A1%8C%E4%B8%BA%E5%9E%8B%E6%A8%A1%E5%BC%8F/#more)
+* [关于 23 种设计模式的有趣见解 - 文章 - 伯乐在线](http://blog.jobbole.com/20496/)
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314175913.png)
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190314180004.png)
