--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -203,6 +203,8 @@ The basics of a swipeable card interface inspired by Tinder
 
 ## 动画
 
+
+* [facebook/pop: An extensible iOS and OS X animation library, useful for physics-based interactions.](https://github.com/facebook/pop)
 * [UIView动画](http://zhanjingbo.site/iOS%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0_2.html)
 * [动画时间](https://github.com/domhofmann/PRTween)
 
