update Swify Closure

--- a/设计模式/解析-设计六大原则.md
+++ b/设计模式/解析-设计六大原则.md
@@ -447,6 +447,13 @@ eg：”车”为一个抽象概念，在现实中并无法直接用来定义对
 注：在最终代码中，依赖关系体现为类构造方法及类方法的传入参数，箭头的指向为调用关系；依赖关系除了临时知道对方外，还是“使用”对方的方法和属性；
 
 
+
+
+## 建壮性
+
+
+一个软件可以正确地运行在不同环境下，则认为软件可移植性高，也可以叫，软件在不同平台下是健壮的。
+
 ## 参考
 
 1. [看懂UML类图和时序图 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html)
