--- a/设计模式/解析-设计六大原则.md
+++ b/设计模式/解析-设计六大原则.md
@@ -451,9 +451,10 @@ eg：”车”为一个抽象概念，在现实中并无法直接用来定义对
 
 ## 建壮性
 
-
 一个软件可以正确地运行在不同环境下，则认为软件可移植性高，也可以叫，软件在不同平台下是健壮的。
 
 ## 参考
 
 1. [看懂UML类图和时序图 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html)
+2. [uml图六种箭头的含义 - wglla的博客 - CSDN博客](https://blog.csdn.net/wglla/article/details/52225571)
+3. [UML各种图总结-精华 - 春风十里的情 - 博客园](http://www.cnblogs.com/jiangds/p/6596595.html)
