--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -910,8 +910,8 @@ MVC模式是一种架构模式，它包含三个角色：模型(Model)，视图(
 
 ## 参考
 
-1. [iOS Design Patterns - Part 2: Project Setup | Ray Wenderlich](https://videos.raywenderlich.com/courses/72-ios-design-patterns/lessons/2)
-
-2. [设计模式六大原则](http://www.uml.org.cn/sjms/201211023.asp)
+1. [看懂UML类图和时序图 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html)
+2. [iOS Design Patterns - Part 2: Project Setup | Ray Wenderlich](https://videos.raywenderlich.com/courses/72-ios-design-patterns/lessons/2)
+3. [设计模式六大原则](http://www.uml.org.cn/sjms/201211023.asp)
 3. [前端你别闹](https://mp.weixin.qq.com/s?__biz=MzI5ODM3MjcxNQ==&mid=2247483943&idx=1&sn=d2b019ae41d8bd63d42f5abd0df64173&chksm=eca79923dbd01035b4038e8c513075ed5dcf201659cfca291125f45b4491fa96cf8b6f023a50&scene=21#wechat_redirect)
 
