--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -196,7 +196,11 @@ The basics of a swipeable card interface inspired by Tinder
 
 [hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
-#### 验证码
+### iOS表情键盘的完整实现
+
+[iOS表情键盘的完整实现](https://mp.weixin.qq.com/s/ZtXXrw7N2YtZbWSQk62Uig)
+
+### 验证码
 
 [zhwayne/WLUnitField: 一种验证码输入 UI 控件](https://github.com/zhwayne/WLUnitField)
 
