--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -423,7 +423,10 @@ int objc_sync_exit(id obj)
 * Adaptee：适配者类
 * Client：客户类
 
-
+适配器模式的实现方式：类适配器和对象适配器。 
+1、类适配器：主要是通过继承来适配两个接口。主要是使用多重继承的方式，但是OC不支持多继承，只支持单继承，所以在iOS中我们使用继承和协议的方式来实现类的适配。 
+2、对象适配器：组合一个被适配类的引用，不是采用继承被适配的类的方式。
+、
 对象适配器：
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190310115724.png)
@@ -432,8 +435,6 @@ int objc_sync_exit(id obj)
 类适配器：
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190310115755.png)
-
-
 
 #### 例子
 
@@ -457,10 +458,20 @@ int objc_sync_exit(id obj)
 -(instancetype)initWithName:(NSString *)name;
 @end
 
+@interface HCDForwards ()
+@end
+@implementation HCDForwards
+-(void)attack{
+    NSLog(@"前锋%@进攻",self.name);
+}
+-(void)defense{
+    NSLog(@"前锋%@防守",self.name);
+}
+@end
+
 // 继承target类的适配器，适配Adaptee类，转为target类
 
 @interface HCDTranslator ()
-
 @end
 @implementation HCDTranslator
 -(instancetype)initWithName:(NSString *)name{
@@ -480,7 +491,6 @@ int objc_sync_exit(id obj)
 @end
 
 // 这样就可以通过适配器Adapter出来的类，实现产出同样的target对象
-
 HCDPlayer *forward = [[HCDForwards alloc]initWithName:@"maidi"];
 [forward attack];
 [forward defense];
