feat(组件: 组件化和VIm更新

--- a/设计模式/解析-组件化开发项目框架设计.md
+++ b/设计模式/解析-组件化开发项目框架设计.md
@@ -14,7 +14,7 @@
 * 开闭原则: 扩展是开放的，修改是封闭的。
 * 里氏替换原则: 子类对象是可以替代基类对象的。
 * 接口隔离原则: 接口的用途要单一，不要在一个接口上根据不同入参实现多个功能。
-* 依赖反转原则: 方法应该依赖抽象，不要依赖实例。ioS开发就是高层业务方法依赖于协议。
+* 依赖反转原则: 方法应该依赖抽象，不要依赖实例。iOS开发就是高层业务方法依赖于协议。
 同时，遵守这五个原则是开发出容易维护和扩展的架构的基础。
 
 ### 组件化开发团队
@@ -33,7 +33,6 @@
 
 1. 由于协议式编程缺少统一调度层，导致难于集中管理，特别是项目规模变大、团队变多的情况下，架构管控就会显得越来越重要。
 2. 协议式编程接口定义模式过于规范，从而使得架构的灵活性不够高。当需要引入一个新的设计模式来开发时，我们就会发现很难融入到当前架构中，缺乏架构的统一性。
-
 虽然协议式架构有这两方面的局限性，但由于其简单易用的特点依然被很多公司采用。
 
 * 中间者
@@ -75,12 +74,38 @@ Bundle App
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190319181441.png)
 
 
+## 依赖注入
+
+传统图层模式
+
+在传统的应用程序体系结构中，较低级别的组件（例如，实用程序层）被设计为由更高级别的组件（例如，策略层）使用，这使得能够构建越来越复杂的系统。在此组合中，更高级别的组件直接依赖于较低级别的组件来完成某些任务。对较低级别组件的这种依赖性限制了较高级别组件的重用机会。[1]
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190714165253.png)
+
+依赖倒置模式
+
+通过添加抽象层，高层和低层都可以从上到下减少传统的依赖关系。然而，“反转”概念并不意味着较低级别的层依赖于较高级别的层。两个层都应该依赖于绘制更高层所需行为的抽象。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190714165311.png)
+
+直接实现将策略类与服务抽象类打包在一个库中。在此实现中，高级组件和低级组件被分布到单独的包/库中，其中定义高级组件所需的行为/服务的接口由高级组件的库拥有并存在于高级组件的库中。低级组件对高级组件接口的实现要求低级组件包依赖于高级组件进行编译，从而颠倒传统的依赖关系。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190714165530.png)
+
+图1和图2示出了具有相同功能的代码，但是在图2中，已经使用接口来反转依赖性。可以选择依赖的方向以最大化策略代码重用，并消除循环依赖性。
+
+在此版本的DIP中，较低层组件对较高层中的接口/摘要的依赖性使得较低层组件的重新利用变得困难。相反，这种实现将传统依赖从“自上而下”反转为“从底部到顶部”。
+
+更灵活的解决方案将抽象组件提取到一组独立的包/库中：
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190714165555.png)
+
 
 ## 静态库和动态库
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190203203917.png)
 
-# iOS从零到一搭建组件化项目架构
+## iOS从零到一搭建组件化项目架构
 
 > 随着公司业务需求的不断迭代发展，工程的代码量和业务逻辑也越来越多，原始的开发模式和架构已经无法满足我们的业务发展速度了，这时我们就需要将原始项目进行一次重构大手术了。这时我们应该很清晰这次手术的动刀口在哪，就是之前的高度耦合的业务组件和功能组件，手术的目的就是将这些耦合拆分成互相独立的各个组件。
 
@@ -131,6 +156,7 @@ Bundle App
 **至于组件的拆分颗粒度，这个着实不好去断定，因人而异，不同的需求功能复杂度拆分出来的组件大小也不尽相同**
 
 ## 如何从零到一搭建组件化架构
+
 > 在讲如何从零到一来实现一个组件化架构项目前，我们需要熟练掌握使用pod来制作组件库。下面我们就围绕提供的组件化示例项目来展开讲解。
 
 **首先，我们来看示例Demo中包含哪些业务组件(如下图所示：)：**
@@ -433,8 +459,43 @@ end
 
 [掘金专栏文章详解](https://juejin.im/post/5ba3cc0df265da0aac6fdaa0)
 
-## 参考文献
 
+### 1.为什么要做模块化？
+
+
+我们都知道最基本的代码设计原则：“Don’t repeat yourself!”，每一个工程都会有自己的架构，即使你是刚入门的开发者，写几天代码也会发现要把一些常用到的重复代码单独拿出来放在一个叫common的地方，实现代码复用。这样看来每个开发者其实都或多或少的做过架构方面的事情，每个团队至少有1~2个人在做这样的事情。
+
+
+### 2. 模块设计原则
+
+越底层的模块，应该越稳定，越抽象，越具有高复用度。
+
+这一点，目测大家应该比较认同，越是底层的SDK，就应该越稳定，稳定的最直观表现就是API很久都不用变化，所有的变化因子不要暴露出来，避免传递给依赖它的模块。但是要做到设计一套API很久都不用改变，那么就需要设计的时候能越抽象, 即需要我们抽象总结的能力。
+
+稳定性 还有一个特点就是会传递，比如 B 模块依赖了 A 模块，如果 B 模块很稳定，但是 A 模块不稳定，那么B模块也会变的不稳定了，因此下一个原则：
+
+不要让稳定的模块依赖不稳定的模块， 减少依赖
+
+既然上面说最好不要依赖，但是我发现我的 B 模块的确依赖了 A 模块里面不可或缺的代码怎么办？ 假设依赖的代码段为 x , 现在来看x的特性, 如果X是一个可能高复用的代码段，那么无妨把x从 A 模块里面拿出来，单做成一个模块 X, 那么 B 模块依赖 X 模块就好了；灵一种情况，x是一个方法或函数，而且不太适合单做成一个模块，所以那就在B模块里面拷贝一份 x 代码就ok了，因为这样可以保证模块的 稳定性 和 自完备性.
+
+如果上面两种方法都不太合适，我们会在后面解耦里面讲到如何解耦
+
+提升模块的复用度，自完备性有时候要优于代码复用
+
+什么是自完备性，就是尽可能的依赖少的模块来达到代码可复用。
+
+举个例子，我有个模块 Utils 里面放了大量的category工具方法等，在日常UI产品开发中，依赖这个Utils会很方便，但是我现在要写一个比较基础的模块，应该就要求复用度更高一些，这个时候需要用到Utils里面的几个方法，那这个时候还适合直接依赖Utils吗，当然不合适了，这与我们上面的设计原则相悖了啊，因此我们这时候为了这个模块的自完备性，就可以重新实现下这几个方法，而不是依赖Utils模块
+
+每个模块只做好一件事情，不要让Common出现
+
+模块化结构是让工程结构更清晰，每个模块都只做一件事情，都有自己的一个命名，这样这个模块才能良性发展， 但是这个名字千万不要再叫Common了，试想下你有没有做过这样的事情：“哎呀，这块代码放哪都不太合适，放Common吧”， 日久以后，这个Common就变成了毒瘤，大家都依赖它，还一堆不相关的代码，这个Common模块就是我们设计原则第一点的反面教材： “非常不稳定，大量依赖，全是耦合，整个模块无法复用到其他app”, 所以删掉工程里面的Common吧，再遇到不知道放哪的代码，就要好好思考模块的设计，再不行如果具有可复用性就单建一个模块吧，为什么不可以呢？
+
+按照你架构的层数从上到下依赖，不要出现下层模块依赖上层模块的现象
+
+业务模块之间也尽量不要耦合
+
+
+## 参考文献
 
 > 本篇文章主要借鉴了casatwy的CTMediator思想重新实践了一遍，下面也有蘑菇街的MGJRouter 和 阿里的 BeeHive 供大家学习参考。
 
@@ -450,9 +511,7 @@ end
 * React Native QQ技术交流群(600+ RN工程师)：**620792950** 欢迎小伙伴进群交流学习
 * iOS QQ技术交流群：**678441305** 欢迎小伙伴进群交流学习
 
-
-
-
 ## 参考
 
 1. [iOS-Component-Pro/README.md at master · guangqiang-liu/iOS-Component-Pro](https://github.com/guangqiang-liu/iOS-Component-Pro/blob/master/README.md)
+2. [模块化与解耦 - 刘坤的技术博客](https://blog.cnbluebox.com/blog/2015/11/28/module-and-decoupling/)
