--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -961,7 +961,82 @@ Adapter概念解析
 
 * [设计模式六大原则（6）：开闭原则](http://www.uml.org.cn/sjms/201211023.asp#6)
 
+## 一些概念和原则
 
+### 单一职责
+
+无论函数还是类, 都应该对应一个单一明确的模块, 有清晰的命名和职责. 最终形成大模块套小模块的树形结构
+职责划分时有以下注意点:
+
+
+### 职责划分清晰:
+清晰明确的职责分配应该能通过一个良好的命名体现出来. 如果起不了一个合适的名字, 或名字过于抽象模糊, 可能暗示职责不明确, 需要拆分.
+
+
+### 划分粒度:
+应该尽量细, 如果一个模块包含多个可描述的职责, 就应该拆分成多个小模块, 委派给小模块完成相应的功能. 保持职责单一.
+最终一个结构良好, 粒度够细的模块, 会形如大模块套小模块的树型结构. 且每个模块里代码量都不多, 实现简单直接清晰易读易重用.
+反例: 非常长的方法, 类, 文件等.
+
+
+### 职责边界明确:
+职责边界限定了一个模块能影响的范围.
+分配时应该注意: 模块应该仅能够操作自己内部的环境和变量, 以及接口传入的参数. 不应该访问甚至修改外部环境. 对外部环境有依赖的, 应该通过接口明确输入.
+环境属于APP层拥有的状态, 所以最终使用和修改环境的代码应该收敛于最上层的APP层代码集中管理.
+eg: 函数仅能修改传入参数. 实例方法只能修改实例内部状态, 或者发出外部事件.
+模块级代码则负责协调内部各个类工作, 形成更大的类或模块, 也只能调用内部各个类提供的接口.
+反例: 各种单例乱飞, 直接访问修改单例, 环境, 文件数据等共享资源等等.
+
+
+上层代码对下层代码有绝对控制权(决定权, 选择权):
+任何权力, 资源的给予都应该 明确 由上层给予, 上层代码有绝对的控制权.
+如果下层提供的功能不符合上层需要, 上层应该有能力用更底层的功能组装起符合自己要求的实现. (强调职责粒度细, 可部分重用)
+为此需要把每一个可能变化的因素考虑进去. 粒度划分也尽量细, 增加重用的尺度.
+从而提升模块重用性, 外部使用者的扩展性, 灵活性.
+具体而言, 如果一个类只提供能力, 无主动行为, 那一般认为是安全可控的, 外部可放心使用, 也可灵活自由组合. 这种工具类多多益善.
+但如果一个类包含了主动行为, 或者依赖了环境, 由此形成强耦合, 则上层使用时就会受到相应的限制.
+这时如果上层需要打破这个限制, 就只能放弃这个类, 使用另外更底层的类的组合替代.
+这种类应该酌情使用, 做好明确的文档说明, 并和重用性好的纯能力代码隔离开, 相应的代码量尽量少.
+一般这类代码应该位于最顶层的APP层, 因此可以使用环境或者绑定主动行为.
+或者做为大多数情况默认行为的代码段, 供APP层代码委托使用, 简化上层使用.
+反例: 主动保存, 主动决定保存地址等强耦合的行为, 需要和提供能力的类隔离开, 由APP层代码决定控制.
+
+
+### 明确的输入输出
+这条其实对应上面单一职责中的边界明确和控制权划分. 这里只是进一步强调一下在代码清晰度上的影响.
+无论函数还是类, 都应该有明确的输入和输出, 不要访问外部环境. 不要有隐式的输入和输出(即环境的输入输出)
+函数优先选择只有明确输出的纯函数, 其次是修改输入参数的副作用行为. 不要有访问外部环境的函数. (类中的方法只是隐含self的函数, 也符合函数相关规则)
+而类则尽量只提供能力, 避免预料外的主动行为和内部决定, 由上层代码调用控制.
+另外最小化依赖输入可以使输入依赖更明确, 耦合更低.
+反之, 依赖耦合更高, 当前实际依赖也没那么明确, 但相应的索要了更大的权利, 有利于内部修改变更. 这种代码应该慎重考虑使用, 并控制好影响范围.
+(一般频繁变更, 且不需要重用的上层代码考虑, 为了内部可变性和便利性, 牺牲一定的耦合和输入明确度. 例如容器这类万能对象提供的就远大于需要的, 内部可按需扩展).
+遵守这条规则可以显著的降低代码复杂度, 改善代码的可读性, 光看接口就能知道是干嘛的, 不用担心有预料外的影响. 也不用花费时间精力成本去阅读实现来掌握理解实现细节.
+(什么是预料外的影响? 比如好好的代码, 某一天环境变了突然出bug了.. 单独测试好好的代码, 集成测试就挂了等等. 即使掌握了实现细节, 也不敢保证和其它代码集成时会不会形成干扰)
+
+### 依赖反转原则
+
+模块不直接依赖于底层实现, 而是通过把依赖转换成自定义的抽象输入接口和数据, 由外部选择合适对象实现并进行注入.
+其实这条规则主要是对应职责中的创建权划分, 将创建权和使用权抽象隔离开. 拥有创建权的模块将对创建的对象形成强耦合.
+通过依赖反转, 创建权收敛到了权限最大的最上层, 最上层代码可以使用多态, 实现差异化的模块组装集成工作. 且在依赖变更时, 也只用改集成的一处代码就够了.
+由此应用了依赖反转注入的模块, 通过把依赖转换为输入, 会更加独立, 自包含. 职责也更加单一, 重用性更好. 上层的组装灵活性也更好.
+
+信息隐藏原则
+
+只暴露按自己职责划分, 外界真正需要的最少信息(接口, 类型等), 由此把实现细节, 复杂度, 变化源等封装在内部, 获得更大的内部可变性, 同时降低外部的信息干扰, 方便理解.
+如果后续真有必要, 可以根据需求适当放开限制, 放开限制也比后期重构时发现需要调整接口容易.
+这样也更符合开闭原则(对接口依赖修改关闭, 对内部实现扩展开放)
+实际使用中应该和接口隔离原则等结合着用.
+接合上层代码的绝对控制权来看, 信息隐藏只提供抽象接口.
+上层代码如果不需要更多控制, 可以直接使用. 但如果对实现细节有要求且和目前提供的不一致, 就应该按需组装定制, 替换为自己需要的.
+两者关注点不一样, 信息隐藏是基于自身职责和可变性的考虑. 上层代码的控制权是基于上层代码实现选择权和成本的考虑.
+最终还是依据模块的职责划分, 定位, 可变性等, 来决定是最小输出(隔离实现, 保留内部可变性, 降低耦合), 还是暴露细节(增加上层代码灵活性, 增加耦合).
+
+响应式和数据流
+
+通过RxSwift等函数式数据流框架, 实现细粒度的数据和事件流的变换组合与绑定.
+由此描述程序间的相互关系, 使得数据变化或事件发生时, 程序能自动响应变化.
+和原来的命令式编程相比, 主要是描述式直接建立相互间的约束关系, 可读性更高. 而函数式的数据源变换组合, 重用粒度更细. 整体代码会更简洁灵活
+相应的代价是思维的转变, 资源开销, Debug堆栈不那么好看等.
 
 ## 总结
 
