--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -565,7 +565,6 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
 总的来说，桥接模式的本质在于“分离抽象和实现”。
 
 
-
 ### 2.3 装饰模式
 
 #### 模式动机
@@ -578,7 +577,9 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
 
 #### 模式定义
 
-装饰模式(Decorator Pattern) ：动态地给一个对象增加一些额外的职责(Responsibility)，就增加对象功能来说，装饰模式比生成子类实现更为灵活。其别名也可以称为包装器(Wrapper)，与适配器模式的别名相同，但它们适用于不同的场合。根据翻译的不同，装饰模式也有人称之为“油漆工模式”，它是一种对象结构型模式。
+装饰模式(Decorator Pattern) ：**动态地给一个对象增加一些额外的职责(Responsibility)，就增加对象功能来说，装饰模式比生成子类实现更为灵活(不受上层的依赖)**。其别名也可以称为包装器(Wrapper)，与适配器模式的别名相同，但它们适用于不同的场合。根据翻译的不同，装饰模式也有人称之为“油漆工模式”，它是一种对象结构型模式。
+
+形象理解为给娃娃套不同的衣服。
 
 #### 应用
 
@@ -1095,10 +1096,11 @@ id<Factory> factory = [[[NSClassFromString(@"ModernRoomFactory") alloc] init] au
 
 ## 参考
 
-1. [看懂UML类图和时序图 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html)
-2. [iOS Design Patterns - Part 2: Project Setup | Ray Wenderlich](https://videos.raywenderlich.com/courses/72-ios-design-patterns/lessons/2)
-3. [创建型设计模式小结 - Gof Lee - 博客园](https://www.cnblogs.com/eagle927183/p/3480059.html)
-4. [GoF23种设计模式简介 - jony - 博客园](https://www.cnblogs.com/jony/articles/1805338.html)
-5. [设计模式六大原则](http://www.uml.org.cn/sjms/201211023.asp)
-3. [前端你别闹](https://mp.weixin.qq.com/s?__biz=MzI5ODM3MjcxNQ==&mid=2247483943&idx=1&sn=d2b019ae41d8bd63d42f5abd0df64173&chksm=eca79923dbd01035b4038e8c513075ed5dcf201659cfca291125f45b4491fa96cf8b6f023a50&scene=21#wechat_redirect)
+1. [装饰器模式的解析-iOS - yyq的博客 - CSDN博客](https://blog.csdn.net/u014644610/article/details/80752097)
+2. [Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html)
+3. [iOS Design Patterns - Part 2: Project Setup | Ray Wenderlich](https://videos.raywenderlich.com/courses/72-ios-design-patterns/lessons/2)
+4. [创建型设计模式小结 - Gof Lee - 博客园](https://www.cnblogs.com/eagle927183/p/3480059.html)
+5. [GoF23种设计模式简介 - jony - 博客园](https://www.cnblogs.com/jony/articles/1805338.html)
+6. [设计模式六大原则](http://www.uml.org.cn/sjms/201211023.asp)
+7. [前端你别闹](https://mp.weixin.qq.com/s?__biz=MzI5ODM3MjcxNQ==&mid=2247483943&idx=1&sn=d2b019ae41d8bd63d42f5abd0df64173&chksm=eca79923dbd01035b4038e8c513075ed5dcf201659cfca291125f45b4491fa96cf8b6f023a50&scene=21#wechat_redirect)
 
