feat(设计模式): 更新适配器模式

--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -402,17 +402,30 @@ int objc_sync_exit(id obj)
 
 ### 2.1 适配器模式
 
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190729102702.png)
+
+* 将一个类的接口转换成客户希望的另外一个接口。适配器模式使得原本由于接口不兼容而不能一起工作的那些类可以一起工作。
 * 在软件开发中采用类似于电源适配器的设计和编码技巧被称为适配器模式。
 * 通常情况下，客户端可以通过目标类的接口访问它所提供的服务。有时，现有的类可以满足客户类的功能需要，但是它所提供的接口不一定是客户类所期望的，这可能是因为现有类中方法名与目标类中定义的方法名不一致等原因所导致的。
 * 在这种情况下，现有的接口需要转化为客户类期望的接口，这样保证了对现有类的重用。如果不进行这样的转化，客户类就不能利用现有类所提供的功能，适配器模式可以完成这样的转化。
 * 在适配器模式中可以定义一个包装类，包装不兼容接口的对象，这个包装类指的就是适配器(Adapter)，它所包装的对象就是适配者(Adaptee)，即被适配的类。
 * 适配器提供客户类需要的接口，适配器的实现就是把客户类的请求转化为对适配者的相应接口的调用。也就是说：当客户类调用适配器的方法时，在适配器类的内部将调用适配者类的方法，而这个过程对客户类是透明的，客户类并不直接访问适配者类。因此，适配器可以使由于接口不兼容而不能交互的类可以一起工作。这就是适配器模式的模式动机。
 
+1. 面向对象的适配器
+    * 一般情况下，我使用的都是面向类的适配器的一种变种（用协议实现适配器），面向类的主要好处是易拓展、易重载并且整个适配器都只实现一个功能。
+    * ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190729161108.png)
+2. 面向类的适配器
+    * ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190729161124.png)
 
+    ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190729161158.png)
+    
+    
 #### 模式定义
 
 适配器模式(Adapter Pattern) ：将一个接口转换成客户希望的另一个接口，适配器模式使接口不兼容的那些类可以一起工作，其别名为包装器(Wrapper)。适配器模式既可以作为类结构型模式，也可以作为对象结构型模式。
 
+* 适配器用于连接两种不同种类的对象，使其毫无问题的协同工作。有时也称作为包装器Wapper。思想很简单，适配器实现客户端所要的某种接口的行为。同时，它又连接到另一个具有（完全）不同接口与行为的对象。一边是客户端懂得如何使用的目标接口，另一边是客户端一无所知的被适配者，适配器处于两者之间。适配器的主要作用是把被适配者的行为传递给管道另一端的客户端。
+* [iOS中的设计模式——适配器(Adapter) –](http://ibloodline.com/articles/2016/09/20/Adapter.html)
 
 #### 模式结构
 
@@ -437,6 +450,8 @@ int objc_sync_exit(id obj)
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190310115755.png)
 
 #### 例子
+
+* 显然，代理(Delegate)模式属于对象适配器。
 
 ```objc
 
@@ -573,7 +588,10 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
 
 * 继承机制，使用继承机制是给现有类添加功能的一种有效途径，通过继承一个现有类可以使得子类在拥有自身方法的同时还拥有父类的方法。但是这种方法是静态的，用户不能控制增加行为的方式和时机。
 * 关联机制，即将一个类的对象嵌入另一个对象中，由另一个对象来决定是否调用嵌入对象的行为以便扩展自己的行为，我们称这个嵌入的对象为装饰器(Decorator)
-装饰模式以对客户透明的方式动态地给一个对象附加上更多的责任，换言之，客户端并不会觉得对象在装饰前和装饰后有什么不同。装饰模式可以在不需要创造更多子类的情况下，将对象的功能加以扩展。这就是装饰模式的模式动机。
+* 装饰模式以对客户透明的方式动态地给一个对象附加上更多的责任，换言之，客户端并不会觉得对象在装饰前和装饰后有什么不同。装饰模式可以在不需要创造更多子类的情况下，将对象的功能加以扩展。这就是装饰模式的模式动机。
+
+* **装饰模式是对继承的有力补充**。你要知道继承不是万能的，继承可以解决实际的问题，但是在项目中你要考虑诸如易维护、易扩展、易复用等，而且在一些情况下（比如上面那个成绩单例子）你要是用继承就会增加很多子类，而且灵活性非常差，那当然维护也不容易了，也就是说装饰模式可以替代继承，解决我们类膨胀的问题。同时，你还要知道继承是静态地给类增加功能，而装饰模式则是动态地增加功能，在上面的那个例子中，我不想要SortDecorator这层的封装也很简单，于是直接在Father中去掉就可以了，如果你用继承就必须修改程序。
+
 
 #### 模式定义
 
